[mkdocs] fix: account metadata java tutorial