@@ -11,7 +11,6 @@ import java.nio.charset.StandardCharsets;
 import java.util.List;
 import java.util.Map;
 
-import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 
@@ -23,214 +22,199 @@ import org.symbol.sdk.symbol.KeyPair;
 import org.symbol.sdk.symbol.Metadata;
 import org.symbol.sdk.symbol.NetworkTimestamp;
 import org.symbol.sdk.symbol.SymbolTransactionFactory;
-import org.symbol.sdk.symbol.descriptors.*;
 import org.symbol.sdk.symbol.models.*;
 
 final class AccountMetadata {
-	private static final ObjectMapper OBJECT_MAPPER = new ObjectMapper();
+	private static final ObjectMapper JSON_MAPPER = new ObjectMapper();
 
-	private static final String NODE_URL = System.getenv()
-		.getOrDefault("NODE_URL", "https://reference.symboltest.net:3001");
+	private static final HttpClient HTTP_CLIENT =
+		HttpClient.newHttpClient();
 
-	private static final SymbolFacade FACADE = new SymbolFacade("testnet");
+	private final String nodeUrl = System.getenv().getOrDefault(
+		"NODE_URL", "https://reference.symboltest.net:3001");
+
+	private final SymbolFacade facade = new SymbolFacade("testnet");
 
 	private AccountMetadata() {
 	}
 
-	private static JsonNode fetchJson(final String path)
-		throws IOException, InterruptedException {
-		final HttpRequest request = HttpRequest.newBuilder(
-			URI.create(NODE_URL + path)).GET().build();
-		final HttpResponse<String> response = HttpClient.newHttpClient()
-			.send(request, BodyHandlers.ofString());
-		return OBJECT_MAPPER.readTree(response.body());
-	}
-
-	private static void announceTransaction(
+	private void announceTransaction(
 		final String payload,
-		final String label)
-		throws IOException, InterruptedException {
-		System.out.println("Announcing " + label + " to /transactions");
+		final String label
+	) throws IOException, InterruptedException {
+		System.out.printf("Announcing %s to /transactions%n", label);
 		final HttpRequest request = HttpRequest.newBuilder(
-			URI.create(NODE_URL + "/transactions"))
+			URI.create(nodeUrl + "/transactions"))
 			.header("Content-Type", "application/json")
 			.PUT(HttpRequest.BodyPublishers.ofString(payload))
 			.build();
-		final HttpResponse<String> response = HttpClient.newHttpClient()
-			.send(request, BodyHandlers.ofString());
-		System.out.println("  Response: " + response.body());
+		final HttpResponse<String> response = HTTP_CLIENT.send(
+			request, BodyHandlers.ofString());
+		System.out.printf("  Response: %s%n", response.body());
 	}
 
-	private static void waitForConfirmation(
+	private void waitForConfirmation(
 		final String transactionHash,
-		final String label)
-		throws IOException, InterruptedException {
-		System.out.println("Waiting for " + label + " confirmation...");
+		final String label
+	) throws IOException, InterruptedException {
+		System.out.printf("Waiting for %s confirmation...%n", label);
 		for (int attempt = 0; 60 > attempt; ++attempt) {
 			Thread.sleep(1000);
 			try {
-				final JsonNode status = fetchJson(
-					"/transactionStatus/" + transactionHash);
+				final String statusPath =
+					"/transactionStatus/" + transactionHash;
+				final HttpRequest statusRequest = HttpRequest.newBuilder(
+					URI.create(nodeUrl + statusPath)).GET().build();
+				final HttpResponse<String> statusResponse = HTTP_CLIENT
+					.send(statusRequest, BodyHandlers.ofString());
+				final JsonNode status =
+					JSON_MAPPER.readTree(statusResponse.body());
 				final String group = status.get("group").asText();
-				System.out.println("  Transaction status: " + group);
+				System.out.printf("  Transaction status: %s%n", group);
 				if ("confirmed".equals(group)) {
-					System.out.println(
-						label + " confirmed in " + attempt + " seconds");
+					System.out.printf("%s confirmed in %d seconds%n",
+						label, attempt);
 					return;
 				}
 				if ("failed".equals(group))
-					throw new IOException(label + " failed: "
-						+ status.get("code").asText());
-			} catch (final JsonProcessingException ex) {
+					throw new IOException(String.format("%s failed: %s",
+						label, status.get("code").asText()));
+			} catch (final IOException ex) {
+				if (ex.getMessage().contains("failed"))
+					throw ex;
+
 				System.out.println("  Transaction status: unknown");
 			}
 		}
-		throw new IOException(label + " not confirmed after 60 seconds");
-	}
-
-	private static
-	AggregateCompleteTransactionV3 createAggregateTransaction(
-		final EmbeddedTransaction embeddedTransaction,
-		final KeyPair signerKeyPair,
-		final NetworkTimestamp timestamp,
-		final long feeMultiplier) {
-		final List<EmbeddedTransaction> embeddedTransactions = List.of(
-			embeddedTransaction);
-		final var descriptor = new
-			AggregateCompleteTransactionV3Descriptor(
-			SymbolFacade.hashEmbeddedTransactions(embeddedTransactions))
-			.transactions(embeddedTransactions);
-		final Map<String, Object> aggregateMap = descriptor.toMap();
-		aggregateMap.put("signerPublicKey", signerKeyPair.getPublicKey());
-		aggregateMap.put(
-			"deadline", timestamp.addSeconds(7200).timestamp);
-		final AggregateCompleteTransactionV3 transaction =
-			(AggregateCompleteTransactionV3) FACADE.transactionFactory
-				.create(aggregateMap);
-		transaction.setFee(new Amount(
-			FeeCalculator.calculateTransactionFee(
-				transaction, feeMultiplier)));
-		return transaction;
-	}
-
-	private static String signTransaction(
-		final KeyPair signerKeyPair,
-		final AggregateCompleteTransactionV3 transaction) {
-		return SymbolTransactionFactory.attachSignature(
-			transaction,
-			FACADE.signTransaction(signerKeyPair, transaction));
-	}
-
-	private static String toMetadataKeyHex(final long value) {
-		return "%016X".formatted(value);
-	}
-
-	private static String toPrettyJson(final Object value) {
-		try {
-			return OBJECT_MAPPER.writerWithDefaultPrettyPrinter()
-				.writeValueAsString(value);
-		} catch (final JsonProcessingException ex) {
-			return value.toString();
-		}
+		throw new IOException(String.format(
+			"%s not confirmed after 60 seconds", label));
 	}
 
 	public static void main(final String[] args) {
-		System.out.println("Using node " + NODE_URL);
+		new AccountMetadata().run();
+	}
+
+	private void run() {
+		System.out.printf("Using node %s%n", nodeUrl);
 
 		// [>step-1]
 		final String privateKeyString = System.getenv().getOrDefault(
-			"SIGNER_PRIVATE_KEY",
-			"000000000000000000000000000000000000"
-				+ "0000000000000000000000000000");
+			"SIGNER_PRIVATE_KEY", "0".repeat(64));
 		final KeyPair signerKeyPair = new KeyPair(
 			new CryptoTypes.PrivateKey(privateKeyString));
 
-		final Address signerAddress = FACADE.network.publicKeyToAddress(
+		final Address signerAddress = facade.network.publicKeyToAddress(
 			signerKeyPair.getPublicKey());
-		System.out.println("Signer address: " + signerAddress);
+		System.out.printf("Signer address: %s%n", signerAddress);
 		// [<step-1]
 		try {
 			// Fetch current network time [>step-2]
 			final String timePath = "/node/time";
-			System.out.println("Fetching current network time from "
-				+ timePath);
-			final JsonNode timeJson = fetchJson(timePath);
+			System.out.printf(
+				"Fetching current network time from %s%n", timePath);
+			final HttpRequest timeRequest = HttpRequest.newBuilder(
+				URI.create(nodeUrl + timePath)).GET().build();
+			final HttpResponse<String> timeResponse = HTTP_CLIENT.send(
+				timeRequest, BodyHandlers.ofString());
+			final JsonNode timeJson = JSON_MAPPER.readTree(
+				timeResponse.body());
 			final NetworkTimestamp timestamp = new NetworkTimestamp(
 				timeJson.get("communicationTimestamps")
 					.get("receiveTimestamp").asLong());
-			System.out.println("  Network time: " + timestamp.timestamp
-				+ " ms since nemesis");
+			System.out.printf("  Network time: %dms since nemesis%n",
+				timestamp.timestamp);
 
 			// Fetch recommended fees
 			final String feePath = "/network/fees/transaction";
-			System.out.println("Fetching recommended fees from "
-				+ feePath);
-			final JsonNode feeJson = fetchJson(feePath);
+			System.out.printf(
+				"Fetching recommended fees from %s%n", feePath);
+			final HttpRequest feeRequest = HttpRequest.newBuilder(
+				URI.create(nodeUrl + feePath)).GET().build();
+			final HttpResponse<String> feeResponse = HTTP_CLIENT.send(
+				feeRequest, BodyHandlers.ofString());
+			final JsonNode feeJson = JSON_MAPPER.readTree(
+				feeResponse.body());
 			final long feeMultiplier = Math.max(
 				feeJson.get("medianFeeMultiplier").asLong(),
 				feeJson.get("minFeeMultiplier").asLong());
-			System.out.println("  Fee multiplier: " + feeMultiplier);
+			System.out.printf("  Fee multiplier: %d%n", feeMultiplier);
 			// [<step-2]
 			System.out.println("\n--- Adding new metadata ---");
 
 			// Define metadata key and value [>step-3]
-			final String keyString = "username_"
-				+ System.currentTimeMillis();
+			final String keyString = String.format(
+				"username_%d", System.currentTimeMillis());
 			final long scopedMetadataKey = Metadata.generateKey(keyString);
-			final byte[] metadataValue = "alice".getBytes(
-				StandardCharsets.UTF_8);
+			final byte[] metadataValue =
+				"alice".getBytes(StandardCharsets.UTF_8);
 			// [<step-3]
 			// Create the embedded metadata transaction [>step-4]
-			final var metadataDescriptor =
-				new AccountMetadataTransactionV1Descriptor(
-					signerAddress,
-					scopedMetadataKey,
+			final EmbeddedTransaction creationEmbeddedTx =
+				facade.transactionFactory.createEmbedded(Map.of(
+					"type", "account_metadata_transaction_v1",
+					"signerPublicKey", signerKeyPair.getPublicKey(),
+					"targetAddress", signerAddress,
+					"scopedMetadataKey", scopedMetadataKey,
 					// When creating new metadata, valueSizeDelta
 					// equals the value length
-					metadataValue.length)
-					.value(metadataValue);
-			final EmbeddedTransaction embeddedTransaction =
-				FACADE.createEmbeddedTransactionFromTypedDescriptor(
-					metadataDescriptor,
-					signerKeyPair.getPublicKey());
+					"valueSizeDelta", metadataValue.length,
+					// Cast one value to infer Map<String, Object>,
+					// as expected by the SDK.
+					"value", (Object) metadataValue));
 			System.out.println("Created embedded metadata transaction:");
-			System.out.println(toPrettyJson(
-				embeddedTransaction.toJson()));
+			System.out.println(JSON_MAPPER
+				.writerWithDefaultPrettyPrinter()
+				.writeValueAsString(creationEmbeddedTx.toJson()));
 			// [<step-4]
 			// Build the aggregate transaction [>step-5]
-			final AggregateCompleteTransactionV3 transaction =
-				createAggregateTransaction(
-					embeddedTransaction,
-					signerKeyPair,
-					timestamp,
-					feeMultiplier);
+			final List<EmbeddedTransaction> creationEmbeddedTxs =
+				List.of(creationEmbeddedTx);
+			final Transaction creationTx =
+				facade.transactionFactory.create(Map.of(
+					"type", "aggregate_complete_transaction_v3",
+					"signerPublicKey", signerKeyPair.getPublicKey(),
+					"deadline", timestamp.addHours(2).timestamp,
+					"transactionsHash",
+						SymbolFacade.hashEmbeddedTransactions(
+							creationEmbeddedTxs),
+					// Cast one value to infer Map<String, Object>,
+					// as expected by the SDK.
+					"transactions", (Object) creationEmbeddedTxs));
+			creationTx.setFee(new Amount(
+				FeeCalculator.calculateTransactionFee(
+					creationTx, feeMultiplier)));
 			// [<step-5]
 			// Sign and generate final payload [>step-6]
-			final String jsonPayload = signTransaction(
-				signerKeyPair, transaction);
+			final String creationPayload = SymbolTransactionFactory
+				.attachSignature(creationTx,
+					facade.signTransaction(signerKeyPair, creationTx));
 
 			// Announce and wait for confirmation
-			final String transactionHash =
-				FACADE.hashTransaction(transaction).toString();
-			System.out.println(
-				"Built aggregate transaction with hash: "
-					+ transactionHash);
-			announceTransaction(jsonPayload, "aggregate transaction");
-			waitForConfirmation(transactionHash, "aggregate transaction");
+			final String creationTxHash =
+				facade.hashTransaction(creationTx).toString();
+			System.out.printf(
+				"Built aggregate transaction with hash: %s%n",
+					creationTxHash);
+			announceTransaction(creationPayload, "creation transaction");
+			waitForConfirmation(creationTxHash, "creation transaction");
 			// [<step-6]
 			System.out.println("\n--- Modifying existing metadata ---");
 
 			// Fetch current metadata value from network [>step-7]
-			final String scopedKeyHex = toMetadataKeyHex(
+			final String scopedKeyHex = "%016X".formatted(
 				scopedMetadataKey);
-			final String metadataPath = "/metadata?sourceAddress="
-				+ signerAddress
-				+ "&targetAddress=" + signerAddress
-				+ "&scopedMetadataKey=" + scopedKeyHex
-				+ "&metadataType=0";
-			System.out.println("Fetching current metadata from "
-				+ metadataPath);
-			final JsonNode metadataJson = fetchJson(metadataPath);
+			final String metadataPath = String.format(
+				"/metadata?sourceAddress=%s&targetAddress=%s"
+					+ "&scopedMetadataKey=%s&metadataType=0",
+				signerAddress, signerAddress, scopedKeyHex);
+			System.out.printf("Fetching current metadata from %s%n",
+				metadataPath);
+			final HttpRequest metadataRequest = HttpRequest.newBuilder(
+				URI.create(nodeUrl + metadataPath)).GET().build();
+			final HttpResponse<String> metadataResponse = HTTP_CLIENT.send(
+				metadataRequest, BodyHandlers.ofString());
+			final JsonNode metadataJson = JSON_MAPPER.readTree(
+				metadataResponse.body());
 
 			// Get the metadata entry
 			final JsonNode metadataData = metadataJson.get("data");
@@ -245,48 +229,59 @@ final class AccountMetadata {
 				.get("metadataEntry");
 			final byte[] currentValue = java.util.HexFormat.of()
 				.parseHex(metadataEntry.get("value").asText());
-			System.out.println("  Current value: " + new String(
-				currentValue, StandardCharsets.UTF_8));
+			System.out.printf("  Current value: %s%n",
+				new String(currentValue, StandardCharsets.UTF_8));
 			// [<step-7]
 			// XOR the current and new values [>step-8]
-			final byte[] newValue = "bob".getBytes(
-				StandardCharsets.UTF_8);
+			final byte[] newValue = "bob".getBytes(StandardCharsets.UTF_8);
 			final byte[] updateValue = Metadata.updateValue(
 				currentValue, newValue);
 
 			// Create the update transaction with XOR'd value
-			final var updateDescriptor =
-				new AccountMetadataTransactionV1Descriptor(
-					signerAddress,
-					scopedMetadataKey,
+			final EmbeddedTransaction updateEmbeddedTx =
+				facade.transactionFactory.createEmbedded(Map.of(
+					"type", "account_metadata_transaction_v1",
+					"signerPublicKey", signerKeyPair.getPublicKey(),
+					"targetAddress", signerAddress,
+					"scopedMetadataKey", scopedMetadataKey,
 					// valueSizeDelta is the difference in length
 					// (can be negative)
-					newValue.length - currentValue.length)
-					.value(updateValue);
-			final EmbeddedTransaction embeddedUpdate =
-				FACADE.createEmbeddedTransactionFromTypedDescriptor(
-					updateDescriptor,
-					signerKeyPair.getPublicKey());
+					"valueSizeDelta",
+						newValue.length - currentValue.length,
+					// Cast one value to infer Map<String, Object>,
+					// as expected by the SDK.
+					"value", (Object) updateValue));
 			// [<step-8]
 			// Build the aggregate for the update [>step-9]
-			final AggregateCompleteTransactionV3 updateTransaction =
-				createAggregateTransaction(
-					embeddedUpdate,
-					signerKeyPair,
-					timestamp,
-					feeMultiplier);
+			final List<EmbeddedTransaction> updateEmbeddedTxs =
+				List.of(updateEmbeddedTx);
+			final Transaction updateTx =
+				facade.transactionFactory.create(Map.of(
+					"type", "aggregate_complete_transaction_v3",
+					"signerPublicKey", signerKeyPair.getPublicKey(),
+					"deadline", timestamp.addHours(2).timestamp,
+					"transactionsHash",
+						SymbolFacade.hashEmbeddedTransactions(
+							updateEmbeddedTxs),
+					// Cast one value to infer Map<String, Object>,
+					// as expected by the SDK.
+					"transactions", (Object) updateEmbeddedTxs));
+			updateTx.setFee(new Amount(
+				FeeCalculator.calculateTransactionFee(
+					updateTx, feeMultiplier)));
 
 			// Sign and announce the update
-			final String updatePayload = signTransaction(
-				signerKeyPair, updateTransaction);
+			final String updatePayload = SymbolTransactionFactory
+				.attachSignature(updateTx,
+					facade.signTransaction(signerKeyPair, updateTx));
 
 			// Announce and wait for confirmation
-			final String updateHash =
-				FACADE.hashTransaction(updateTransaction).toString();
+			final String updateTxHash =
+				facade.hashTransaction(updateTx).toString();
 			System.out.println(
-				"Built aggregate transaction with hash: " + updateHash);
-			announceTransaction(updatePayload, "aggregate transaction");
-			waitForConfirmation(updateHash, "aggregate transaction");
+				"Built aggregate transaction with hash: " + updateTxHash);
+			announceTransaction(updatePayload, "update transaction");
+			waitForConfirmation(updateTxHash, "update transaction");
 			// [<step-9]
 		} catch (final IOException | InterruptedException ex) {
 			System.out.println(ex.getMessage());
